// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Aspirin Integration Test parses aspirin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Aspirin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'O']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['C', 'O']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(1, v6);
export const v8 = Molecule([v3, v4, v7]);"
`;

exports[`Ibuprofen Integration Test parses ibuprofen 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Ibuprofen Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['C', 'C', 'O']);
export const v6 = Linear(['C']);
export const v7 = v5.attach(1, v6);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(2, v8);
export const v10 = Molecule([v3, v4, v9]);"
`;

exports[`Naproxen Integration Test parses naproxen 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "O",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "c",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "c",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Naproxen Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'O']);
export const v2 = Ring({ atoms: 'c', size: 6, branchDepths: [0, 0, 0, 0, 1, 1] });
export const v3 = Ring({ atoms: 'c', size: 6, ringNumber: 2, offset: 3, branchDepths: [0, 0, 0, 1, 1, 1] });
export const v4 = FusedRing({ metadata: { rings: [{ ring: v2, start: 2, end: 11, atoms: [{ position: 2, depth: 0, value: 'c', rings: [1, 1] }, { position: 3, depth: 0, value: 'c', rings: [1] }, { position: 4, depth: 0, value: 'c', rings: [1] }, { position: 5, depth: 0, value: 'c', rings: [2, 2, 1] }, { position: 10, depth: 1, value: 'c', rings: [2, 1], branchId: 10 }, { position: 11, depth: 1, value: 'c', rings: [1], branchId: 10 }] }, { ring: v3, start: 5, end: 10, atoms: [{ position: 5, depth: 0, value: 'c', rings: [2, 2, 1] }, { position: 6, depth: 0, value: 'c', rings: [2] }, { position: 7, depth: 0, value: 'c', rings: [2] }, { position: 8, depth: 1, value: 'c', rings: [2], branchId: 10 }, { position: 9, depth: 1, value: 'c', rings: [2], branchId: 10 }, { position: 10, depth: 1, value: 'c', rings: [2, 1], branchId: 10 }] }] } });
export const v5 = Linear(['C', 'C', 'O']);
export const v6 = Linear(['C']);
export const v7 = v5.attach(1, v6);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(2, v8);
export const v10 = Molecule([v1, v4, v9]);"
`;

exports[`Ketoprofen Integration Test parses ketoprofen 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "2": [
      {
        "rings": [
          {
            "atoms": "c",
            "attachments": {},
            "bonds": [
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
        "type": "fused_ring",
      },
    ],
    "3": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Ketoprofen Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'O']);
export const v2 = Ring({ atoms: 'c', size: 6 });
export const v3 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v4 = v2.addSequentialRings([{ ring: v3 }]);
export const v5 = v1.attach(2, v4);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(3, v6);"
`;

exports[`Diclofenac Integration Test parses diclofenac 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "N",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "2": [
          {
            "atoms": [
              "Cl",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "Cl",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Diclofenac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['N']);
export const v6 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v7 = Linear(['Cl']);
export const v8 = v6.attach(2, v7);
export const v9 = Linear(['Cl']);
export const v10 = Molecule([v3, v4, v5, v8, v9]);"
`;
